--- a/index.html
+++ b/index.html
@@ -1138,27 +1138,27 @@
   <div class="legendBody">
     <div class="legendItem">
       <span class="legendDot cluster"></span>
-      <span>클러스터(파랑): 클릭 시 확대</span>
+      <span>클릭 시 확대</span>
     </div>
 
     <div class="legendItem">
       <span class="legendDot pink"></span>
-      <span>전광판 핀: 전광판 / 빌보드 / 외벽</span>
+      <span>전광판 / 빌보드 / 외벽</span>
     </div>
 
     <div class="legendItem">
       <span class="legendDot mint"></span>
-      <span>교통 매체: 버스 / 지하철 / 공항</span>
+      <span>버스 / 지하철 / 공항</span>
     </div>
 
     <div class="legendItem">
       <span class="legendDot yellow"></span>
-      <span>복합 상업시설: 쇼핑몰 / 대형마트</span>
+      <span>쇼핑몰 / 대형마트</span>
     </div>
 
     <div class="legendItem">
       <span class="legendDot orange"></span>
-      <span>문화·레저: 극장 / 레저 / 휴양 시설</span>
+      <span>극장 / 레저 / 휴양 시설</span>
     </div>
 
     <div class="legendItem">
@@ -1168,7 +1168,7 @@
 
     <div class="legendItem">
       <span class="legendDot gray"></span>
-      <span>기타</span>
+      <span>기타 매체</span>
     </div>
   </div>
 </div>
