--- a/index.html
+++ b/index.html
@@ -426,20 +426,23 @@
   top:12px;
   left:12px;
   z-index:1200;
-  background:var(--panel);
+  background: rgba(0,0,0,.55);
+backdrop-filter: blur(6px);
   color:var(--text);
   border-radius:12px;
   box-shadow:var(--shadow);
-  width:260px;
+  width: max-content;
+min-width: 170px;
+max-width: 230px;
   overflow:hidden;
-  border:1px solid rgba(255,255,255,.10);
+  border: 1px solid rgba(255,255,255,.14);
 }
 
 .legendHeader{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  padding:10px 12px;
+  padding:8px 10px;
   font-weight:800;
   border-bottom:1px solid rgba(255,255,255,.10);
 }
@@ -453,7 +456,7 @@
   line-height:1;
 }
 
-.legendBody{ padding:10px 12px; }
+.legendBody{ padding:8px 10px; }
 
 .mapLegend.collapsed .legendBody{ display:none; }
 
