--- a/index.html
+++ b/index.html
@@ -426,8 +426,7 @@
   top:12px;
   left:12px;
   z-index:1200;
-  background: rgba(0,0,0,.55);
-backdrop-filter: blur(6px);
+  background: rgba(15,16,17,.92); /* --panel(#0f1011)과 동일 계열, 거의 불투명 */
   color:var(--text);
   border-radius:12px;
   box-shadow:var(--shadow);
@@ -435,7 +434,7 @@ backdrop-filter: blur(6px);
 min-width: 170px;
 max-width: 230px;
   overflow:hidden;
-  border: 1px solid rgba(255,255,255,.14);
+  border: 1px solid rgba(255,255,255,.18);
 }
 
 .legendHeader{
