legend: match sideCard background/shadow/z-index

--- a/index.html
+++ b/index.html
@@ -425,16 +425,16 @@
   position:absolute;
   top:12px;
   left:12px;
-  z-index:1200;
-  background: rgba(15,16,17,.92); /* --panel(#0f1011)과 동일 계열, 거의 불투명 */
+  z-index:5001;
+  background: rgba(16,18,20,.82); /* --panel(#0f1011)과 동일 계열, 거의 불투명 */
   color:var(--text);
-  border-radius:12px;
-  box-shadow:var(--shadow);
+  border-radius:16px;
+  box-shadow: 0 18px 44px rgba(0,0,0,.45);
   width: max-content;
 min-width: 170px;
 max-width: 230px;
   overflow:hidden;
-  border: 1px solid rgba(255,255,255,.17);
+  border: 1px solid rgba(255,255,255,.10);
 }
 
 .legendHeader{
