test: set MapTiler API key in vector_test MapLibre page

--- a/vector_test.html
+++ b/vector_test.html
@@ -19,7 +19,7 @@
 <div id="status" style="position:fixed;left:10px;bottom:10px;z-index:9999;background:rgba(0,0,0,0.75);color:#fff;padding:8px 10px;border-radius:8px;font:12px/1.4 system-ui;max-width:70vw;white-space:pre-wrap;">loading...</div>
 
 <script>
-  const KEY = "YOUR_KEY"; // <-- 여기만 교체
+ const KEY = "s3k9sg6vGwjKAfd4mDlR";
   const map = new maplibregl.Map({
     container: "map",
     style: `https://api.maptiler.com/maps/dataviz-v4-dark/style.json?key=${KEY}`,
