--- a/vector_test.html
+++ b/vector_test.html
@@ -67,7 +67,7 @@ map.once("idle", () => {
      } catch (e) {}
     });
 // TEST: load data_public_dummy_5000.json and render CLUSTER (MapLibre source cluster)
-
+map.once("load", () => {
 fetch("./data_public_dummy_5000.json")
   .then(r => r.json())
   .then(data => {
@@ -196,11 +196,12 @@ fetch("./data_public_dummy_5000.json")
     map.on("mouseenter", "dooh-clusters", () => { map.getCanvas().style.cursor = "pointer"; });
     map.on("mouseleave", "dooh-clusters", () => { map.getCanvas().style.cursor = ""; });
 
-    setStatus((statusEl ? statusEl.textContent + "\n" : "") + "Cluster layers added.");
+       setStatus((statusEl ? statusEl.textContent + "\n" : "") + "Cluster layers added.");
   })
   .catch(err => {
-    setStatus("Data load error: " + err.message);
+    setStatus("Data load error: " + (err && err.message ? err.message : String(err)));
   });
+});
 
 </script>
 
