debug(beta): show app_ml.js load success/failure on badge (onload/onerror)

--- a/index_ml.html
+++ b/index_ml.html
@@ -23,6 +23,7 @@
   <div id="map"></div>
   <div id="badge">MapLibre: waiting…</div>
 
-<script src="./app_ml.js?v=1.2.2.2-ml" defer></script>
+<script src="./app_ml.js?v=1.2.2.2-ml" onload="document.getElementById('badge').textContent='JS loaded'" onerror="document.getElementById('badge').textContent='JS load FAILED'" defer></script>
+
 </body>
 </html>
