chore(beta): bump app_ml.js cache-buster query (force latest load)

--- a/index_ml.html
+++ b/index_ml.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Frontier DOOH 전국 DB v1.2.2.2-ml (beta)</title>
+  <title>Frontier DOOH 전국 DB v.2.2.2-ml1 (beta)</title>
 
   <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
   <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
@@ -23,7 +23,7 @@
   <div id="map"></div>
   <div id="badge">MapLibre: waiting…</div>
 
-<script src="./app_ml.js?v=1.2.2.2-ml" onload="document.getElementById('badge').textContent='JS loaded'" onerror="document.getElementById('badge').textContent='JS load FAILED'" defer></script>
+<script src="./app_ml.js?v=1.2.2.2-ml-2" onload="document.getElementById('badge').textContent='JS loaded'" onerror="document.getElementById('badge').textContent='JS load FAILED'" defer></script>
 
 </body>
 </html>
