style(beta): apply Frontier popup theme (dark + mint)

--- a/index_ml.html
+++ b/index_ml.html
@@ -17,6 +17,28 @@
       background: rgba(0,0,0,.65); color: #fff; font: 12px/1.2 system-ui;
       pointer-events: none;
     }
+    /* Frontier popup (MapLibre) */
+.frontier-popup .maplibregl-popup-content{
+  background: rgba(15,16,17,.92);
+  color: #d8dee6;
+  border: 1px solid rgba(162,222,204,.35);
+  border-radius: 14px;
+  box-shadow: 0 16px 40px rgba(0,0,0,.55);
+  padding: 14px 14px 12px;
+}
+.frontier-popup .maplibregl-popup-tip{
+  border-top-color: rgba(15,16,17,.92);
+}
+.frontier-popup .maplibregl-popup-close-button{
+  color: #d8dee6;
+  font-size: 16px;
+  padding: 6px 10px;
+}
+.frontier-popup .maplibregl-popup-close-button:hover{
+  background: transparent;
+  color: #a2decc;
+}
+
   </style>
 </head>
 <body>
