test: switch STYLE_URL back to MapTiler dataviz-v4-dark (KO labels check)

--- a/ml_ready.html
+++ b/ml_ready.html
@@ -38,8 +38,7 @@
     // [이식용 블록] MapLibre + 한글라벨 + 클러스터 + sanitize + 순서고정
     // ============================================================
 
-    const STYLE_URL = "https://demotiles.maplibre.org/style.json";
-
+    const STYLE_URL = "https://api.maptiler.com/maps/dataviz-v4-dark/style.json?key=s3k9sg6vGwjKAfd4mDIR";
 
     // data 선택: 기본은 운영과 동일 경로(현재는 샘플 20개), 더미는 ?data=dummy5000
     const params = new URLSearchParams(location.search);
