--- a/ml_ready.html
+++ b/ml_ready.html
@@ -101,22 +101,29 @@
     }
 
     function applyKoreanLabels(map){
-      // "name:ko" 우선, 없으면 name
-      const style = map.getStyle && map.getStyle();
-      if (!style || !style.layers) return;
+  // "name:ko" 우선, 없으면 name_ko/name:kr/name 순으로 폴백
+  const style = map.getStyle && map.getStyle();
+  if (!style || !style.layers) return;
 
-      for (const layer of style.layers){
-        if (!layer || layer.type !== "symbol") continue;
-        const tf = layer.layout && layer.layout["text-field"];
-        if (!tf) continue;
+  const KO_FIELD = ["coalesce",
+    ["get","name:ko"],
+    ["get","name_ko"],
+    ["get","name:kr"],
+    ["get","name"]
+  ];
 
-        try {
-          map.setLayoutProperty(layer.id, "text-field", ["coalesce", ["get","name:ko"], ["get","name"]]);
-        } catch (e) {
-          // 일부 레이어는 수정 불가일 수 있음(무시)
-        }
-      }
+  for (const layer of style.layers){
+    if (!layer || layer.type !== "symbol") continue;
+    const tf = layer.layout && layer.layout["text-field"];
+    if (!tf) continue;
+
+    try {
+      map.setLayoutProperty(layer.id, "text-field", KO_FIELD);
+    } catch (e) {
+      // 수정 불가 레이어는 건너뜀
     }
+  }
+}
 
     function addClusterLayers(map){
       // cluster 원/숫자/단일 포인트 레이어
@@ -290,7 +297,8 @@ map.on("error", (e) => {
 
           addClusterLayers(map);
 
-          statusEl.textContent = "Loaded OK";
+          statusEl.textContent = "Loaded OK (KO patch applied)";
+
         } catch (e) {
           statusEl.textContent = "ERROR: init failed";
           console.error(e);
