fix(cache): bust app.js with version query v1.2.2.2

--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@ max-width: 230px;
       <div class="modalBody" id="cartModalBody"></div>
     </div>
   </div>
-  <script src="./app.js" defer></script>
+  <script src="./app.js?v=v1.2.2.2" defer></script>
 </body>
 </html>
 
