--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@ max-width: 230px;
       <div class="modalBody" id="cartModalBody"></div>
     </div>
   </div>
-  <script src="./app.js?v=v1.2.2.2" defer></script>
+  <script src="./app.js?ts=20260123_01" defer></script>
 </body>
 </html>
 
