--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Frontier DOOH 전국 DB v1.2.2</title>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-<link rel="stylesheet" href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" />
-<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
-<script src="https://unpkg.com/leaflet-maplibre-gl@latest/leaflet-maplibre-gl.js"></script>
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css"/>
-  <script src="https://unpkg.com/leaflet-maplibre-gl@latest/leaflet-maplibre-gl.js"></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
   <style>
@@ -48,9 +44,7 @@
       flex-direction:column;
       min-height:0;
     }
-  /* MapLibre(배경) 보이게: Leaflet 컨테이너 배경 투명 */
-  #map { background: transparent !important; }
-  .leaflet-container { background: transparent !important; }
+
     .leaflet-container{cursor:grab;}
     .leaflet-dragging .leaflet-container{cursor:grabbing;}
 
@@ -1277,7 +1271,7 @@ max-width: 230px;
       <div class="modalBody" id="cartModalBody"></div>
     </div>
   </div>
-  <script src="./app.js?ts=20260123_01" defer></script>
+  <script src="./app.js" defer></script>
 </body>
 </html>
 
