chore(index): load maplibre-gl 3.6.1 via unpkg (baseline prep)

--- a/index.html
+++ b/index.html
@@ -1071,6 +1071,8 @@ max-width: 230px;
     }
     .mSum .muted{ color:rgba(255,255,255,.65); font-weight:900; font-size:12px; }
   </style>
+  <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
+<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 </head>
 
 <body>
