feat(legend): slide toggle legend + map style panel together and rename header

--- a/index.html
+++ b/index.html
@@ -1132,8 +1132,8 @@ max-width: 230px;
         <!-- Map Legend -->
 <div id="mapLegend" class="mapLegend expanded">
   <div class="legendHeader">
-    <span>범례</span>
-    <button id="legendToggle" aria-label="범례 접기">–</button>
+    <span>범례 및 지도</span>
+    <button id="legendToggle" aria-label="범례 및 지도 접기">...</button>
   </div>
   <div class="legendBody">
     <div class="legendItem">
