--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ max-width: 230px;
       font-weight:1000;
     }
     .mSum .muted{ color:rgba(255,255,255,.65); font-weight:900; font-size:12px; }
-    /* v1.2.2.5: merge title/loaded into filters row (embed-friendly) */
+  /* v1.2.2.5: merge title/loaded into filters row (embed-friendly) */
 #filtersRow .filtersInner{
   display:flex;
   align-items:center;
@@ -1124,8 +1124,63 @@ max-width: 230px;
   flex: 1 1 280px;
   min-width: 220px;
 }
-#filtersRow #catHigh{
-  min-width: 180px;
+#filtersRow #catHigh{ min-width: 180px; }
+
+/* ===== Imweb iframe(임베드) 전용: 헤더 충돌 제거 + 입력 UI 확대/중앙화 ===== */
+.is-embed #filtersRow .filtersInner{
+  justify-content:center;
+  gap:12px;
+  padding:8px 12px;
+}
+
+/* 아임웹 헤더(로고/메뉴)와 중복되는 제목은 숨김 (초기화 버튼으로 대체) */
+.is-embed #filtersRow .titleLeft{ display:none; }
+
+/* Loaded는 남기되 작게/뒤로 배치 */
+.is-embed #filtersRow .pill{
+  order: 5;
+  font-size:12px;
+  padding:6px 10px;
+  opacity:.85;
+}
+
+/* 입력/컨트롤을 화면 중앙에 크게 */
+.is-embed #filtersRow .qWrap{
+  order: 1;
+  flex: 1 1 520px;
+  min-width: 340px;
+  max-width: 740px;
+}
+.is-embed #filtersRow #catHigh{
+  order: 2;
+  min-width: 220px;
+}
+.is-embed #filtersRow #reset{
+  order: 3;
+  min-width: 96px;
+}
+
+/* 높이/가독성 통일 (검색창이 작아 보이는 문제 해결) */
+.is-embed #filtersRow .q,
+.is-embed #filtersRow .qGo,
+.is-embed #filtersRow .cat,
+.is-embed #filtersRow .btn{
+  height:44px;
+}
+.is-embed #filtersRow .q{
+  font-size:14px;
+  padding:0 14px;
+}
+.is-embed #filtersRow .qGo{
+  width:56px;
+}
+.is-embed #filtersRow .cat{
+  font-size:14px;
+  padding:0 12px;
+}
+.is-embed #filtersRow .btn{
+  font-size:14px;
+  padding:0 14px;
 }
 
 @media (max-width: 820px){
@@ -1133,8 +1188,20 @@ max-width: 230px;
   #filtersRow .qWrap{ flex:1 1 100%; }
   #filtersRow #catHigh{ flex:1 1 100%; }
   #filtersRow #reset{ width:100%; }
+
+  /* 임베드 모바일에서는 더욱 확실히 한 줄씩 */
+  .is-embed #filtersRow .qWrap{ min-width: 0; max-width: none; }
 }
   </style>
+  <script>
+  (function(){
+    try{
+      if (window.self !== window.top) document.documentElement.classList.add("is-embed");
+    }catch(e){
+      document.documentElement.classList.add("is-embed");
+    }
+  })();
+</script>
 </head>
 
 <body>
