ui: change search button icon to text

--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@ max-width: 230px;
 <div class="pill">Loaded: <b id="pillLoaded">0</b></div>
       <div class="qWrap" style="position:relative;">
         <input id="q" class="q" type="text" placeholder="검색 (예: 강남구, 홍대, 전광판 …)" />
-        <button class="qGo" id="qGo" aria-label="검색 실행">🔍</button>
+        <button class="qGo" id="qGo" type="button" aria-label="검색 실행">검색</button>
         <div id="qSuggest" role="listbox" aria-label="검색어 제안"></div>
       </div>
       <select id="catHigh" class="cat" aria-label="매체 카테고리"></select>
