style(embed): overlay #qGo search icon inside input field

--- a/index.html
+++ b/index.html
@@ -1153,6 +1153,8 @@ max-width: 230px;
   flex: 1 1 520px;
   min-width: 340px;
   max-width: 740px;
+  position:relative;
+  display:block;
 }
 .is-embed #filtersRow #catHigh{
   order: 2;
