--- a/index.html
+++ b/index.html
@@ -1172,21 +1172,21 @@ max-width: 230px;
 .is-embed #filtersRow .btn{
   height:44px;
 }
-.is-embed #filtersRow .q{
+#filtersRow .q{
   font-size:14px;
-  padding:0 46px 0 14px; /* 오른쪽 46px: 아이콘 자리 */
+  padding:0 46px 0 14px;
 }
     /* 검색 아이콘을 입력창 내부 우측으로 (imweb embed) */
-.is-embed #filtersRow .qWrap{ position:relative; }
-
-.is-embed #filtersRow .qGo{
+#filtersRow .qWrap{ position:relative; }
+#filtersRow .qGo{
   position:absolute;
+  z-index:2;
   right:8px;
   top:50%;
   transform:translateY(-50%);
   width:36px;
   min-width:36px;
-  height:36px;       /* 44px 높이 안에서 아이콘만 작게 */
+  height:36px;
   padding:0;
   border:0;
   background:transparent;
@@ -1197,7 +1197,7 @@ max-width: 230px;
   cursor:pointer;
 }
 
-.is-embed #filtersRow .qGo:hover{
+#filtersRow .qGo:hover{
   background:rgba(255,255,255,.08);
 }
 .is-embed #filtersRow .qGo{
