--- a/index.html
+++ b/index.html
@@ -1172,6 +1172,17 @@ max-width: 230px;
 .is-embed #filtersRow .btn{
   height:44px;
 }
+      /* [imweb iframe] 검색 버튼(#qGo)을 입력창 안으로 강제 고정 (임베드에서만) */
+  .is-embed #filtersRow .qWrap{ position:relative !important; }
+  .is-embed #filtersRow .q{ width:100% !important; padding-right:52px !important; }
+
+  .is-embed #filtersRow .qGo{
+    position:absolute !important;
+    right:8px !important;
+    top:50% !important;
+    transform:translateY(-50%) !important;
+    z-index:2 !important;
+  }
 #filtersRow .q{
   font-size:14px;
   padding:0 52px 0 14px !important;
