Hide Loaded pill in filters header

--- a/index.html
+++ b/index.html
@@ -1140,12 +1140,8 @@ max-width: 230px;
 .is-embed #filtersRow .titleLeft{ display:none; }
 
 /* Loaded는 남기되 작게/뒤로 배치 */
-.is-embed #filtersRow .pill{
-  order: 5;
-  font-size:12px;
-  padding:6px 10px;
-  opacity:.85;
-}
+/* Loaded: xx 알약 숨김 (GitHub Pages + Imweb iframe 공통) */
+#filtersRow .pill{ display:none !important; }
 
 /* 입력/컨트롤을 화면 중앙에 크게 */
 .is-embed #filtersRow .qWrap{
