--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,23 @@ max-width: 230px;
     </div>
   </div>
   <script src="./app.js" defer></script>
+  <script>
+(function(){
+  // 부모(Imweb)로 마우스 좌표 전달
+  // 보안상 * 대신 Imweb 도메인으로 좁히는 것을 권장합니다.
+  // 예) const TARGET_ORIGIN = "https://대표님도메인.imweb.me";
+  const TARGET_ORIGIN = "*";
+
+  function send(x, y){
+    try{
+      parent.postMessage({ type:"CUBE_CURSOR_MOVE", x:x, y:y }, TARGET_ORIGIN);
+    }catch(_){}
+  }
+
+  window.addEventListener("pointermove", (e)=>send(e.clientX, e.clientY), {passive:true});
+  window.addEventListener("mousemove",   (e)=>send(e.clientX, e.clientY), {passive:true});
+})();
+</script>
 </body>
 </html>
 
