chore(ui): reinforce pill hide for embed

--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@ max-width: 230px;
 /* Loaded는 남기되 작게/뒤로 배치 */
 /* Loaded: xx 알약 숨김 (GitHub Pages + Imweb iframe 공통) */
 #filtersRow .pill{ display:none !important; }
-
+.is-embed #filtersRow .pill{ display:none !important; }
 /* 입력/컨트롤을 화면 중앙에 크게 */
 .is-embed #filtersRow .qWrap{
   order: 1;
