--- a/index.html
+++ b/index.html
@@ -1447,22 +1447,27 @@ max-width: 230px;
     </div>
   </div>
   <script src="./app.js" defer></script>
-  <script>
+<script>
 (function(){
-  if (window === window.parent) return; // iframe 안에서만 부모로 좌표 전송
-  // 부모(Imweb)로 마우스 좌표 전달
-  // 보안상 * 대신 Imweb 도메인으로 좁히는 것을 권장합니다.
-  // 예) const TARGET_ORIGIN = "https://대표님도메인.imweb.me";
-  const TARGET_ORIGIN = "*";
+  // 부모 페이지가 없거나 자기 자신이면 좌표 전송 중단
+  if (window === window.parent) return; 
 
-  function send(x, y){
-    try{
-      parent.postMessage({ type:"CUBE_CURSOR_MOVE", x:x, y:y }, TARGET_ORIGIN);
-    }catch(_){}
+  function sendCoord(e){
+    try {
+      // iframe 내부 마우스 좌표를 부모(아임웹)로 전송
+      window.parent.postMessage({ 
+        type: "CUBE_CURSOR_MOVE", 
+        x: e.clientX, 
+        y: e.clientY 
+      }, "*"); 
+    } catch(err) {
+      // 보안 오류 방지용 빈 캐치
+    }
   }
 
-  window.addEventListener("pointermove", (e)=>send(e.clientX, e.clientY), {passive:true});
-  window.addEventListener("mousemove",   (e)=>send(e.clientX, e.clientY), {passive:true});
+  // 데스크탑과 모바일 환경 모두 대응
+  window.addEventListener("pointermove", sendCoord, {passive: true});
+  window.addEventListener("mousemove", sendCoord, {passive: true});
 })();
 </script>
 </body>
