css: cap app grid left column with clamp (preserve 16:9)

--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
       flex:1 1 auto;
       min-height:0;
       display:grid;
-      grid-template-columns: minmax(820px, 45vw) 1fr;
+      grid-template-columns: clamp(820px, 45vw, 920px) 1fr;
     }
     @media (max-width: 1250px){
-      .app{grid-template-columns: minmax(720px, 48vw) 1fr;}
+      .app{grid-template-columns: clamp(720px, 48vw, 820px) 1fr;}
     }
     @media (max-width: 980px){
       .filtersRow{position:relative; top:auto;}
