css: mobile stack map above list via grid item order (<=980px)

--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
       html, body{overflow:auto;}
       body{overflow:auto;}
       .app{grid-template-columns: 1fr; grid-template-rows: 520px 1fr;}
+      .mapBox{order:-1;}
+.panel{order:1;}
       .errBanner{ position:relative; top:auto; }
     }
 
