--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
       grid-template-columns: repeat(3, 1fr);
       gap:12px;
     }
+    @media (max-width: 720px){ .listWrap{padding:16px;} .grid{gap:16px;} }
     @media (max-width: 1200px){ .grid{grid-template-columns: repeat(2, 1fr);} }
     @media (max-width: 720px){ .grid{grid-template-columns: 1fr;} }
 
