--- a/index.html
+++ b/index.html
@@ -417,6 +417,12 @@
       font-size:13px; color:var(--muted); margin:0 0 10px;
       display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical; overflow:hidden; min-height:34px;
     }
+    .lockHint{
+  font-size:12px;
+  color:rgba(255,255,255,.45);
+  margin-left:4px;
+  letter-spacing:.2px;
+}
     .price{
       display:flex; align-items:baseline; justify-content:space-between; gap:8px;
       padding-top:10px; border-top:1px solid rgba(255,255,255,.06);
