Set FRONTIER_LOGIN_URL for login CTA routing

--- a/index.html
+++ b/index.html
@@ -1455,6 +1455,12 @@ max-width: 230px;
       <div class="modalBody" id="cartModalBody"></div>
     </div>
   </div>
+  <script>
+  // TODO: 아래 ""에 실제 로그인 페이지 URL을 넣어주세요.
+  // 예: "https://본인도메인/로그인페이지" 처럼 '전체 URL' 권장
+  window.FRONTIER_LOGIN_URL = "";
+</script>
+
   <script src="./app.js" defer></script>
 <script>
 (function(){
